--- a/index.html
+++ b/index.html
@@ -204,47 +204,48 @@
           <!-- Card 1 -->
           <div class="w-1/2 flex-shrink-0 px-3">
             <div
-              class="bg-white border border-yellow-400 rounded-lg transition-all duration-300 ease-in-out hover:bg-[#fffbf5] hover:shadow-xl hover:-translate-y-1">
-              <div class="relative">
+              class="bg-[#f3efe9] border border-yellow-400 rounded-md transition-all duration-300 ease-in-out hover:shadow-lg hover:bg-[#fffbf5] hover:shadow-xl hover:-translate-y-1">
+              <!-- Image Section -->
+              <div class="relative bg-[#f3efe9] p-3">
+                <!-- Featured Badge -->
                 <span
-                  class="absolute top-3 left-3 bg-orange-500 text-white text-xs font-semibold px-3 py-1 rounded">
+                  class="absolute top-0 left-0 bg-orange-500 text-white text-xs font-semibold px-3 py-1">
                   FEATURED
                 </span>
 
-                <div class="grid grid-cols-3 gap-2 p-3">
+                <!-- Images -->
+                <div class="grid grid-cols-3 gap-2 mt-4">
                   <img
                     src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
-                    class="rounded h-24 w-full object-cover" />
+                    class="h-28 w-full object-cover" />
                   <img
                     src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
-                    class="rounded h-24 w-full object-cover" />
+                    class="h-28 w-full object-cover" />
                   <img
                     src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
-                    class="rounded h-24 w-full object-cover" />
+                    class="h-28 w-full object-cover" />
                 </div>
               </div>
 
-              <div class="px-5 pb-5">
-                <h3 class="text-lg font-semibold">
-                  OPPO A3s 6/128 (Brand New)
+              <!-- Content Section -->
+              <div class="px-4 pb-4 pt-2">
+                <h3
+                  class="text-[17px] font-semibold text-gray-800 leading-snug">
+                  HY320 4k Smart Android Projector Original Product
                 </h3>
 
-                <div class="flex gap-2 mt-2">
-                  <span
-                    class="bg-yellow-100 text-yellow-700 text-xs px-2 py-1 rounded-full">
-                    MEMBER
-                  </span>
-                  <span
-                    class="bg-blue-100 text-blue-700 text-xs px-2 py-1 rounded-full">
-                    VERIFIED SELLER
-                  </span>
-                </div>
-
-                <p class="text-gray-500 text-sm mt-2">Dhaka, Mobile Phones</p>
-
-                <p class="text-green-600 font-semibold text-lg mt-2">
-                  Tk 4,790
+                <p class="text-sm text-gray-500 mt-1">
+                  Dhaka, TV & Video Accessories
                 </p>
+
+                <p class="text-green-600 font-semibold mt-2 text-lg">
+                  Tk 5,400
+                </p>
+
+                <!-- Bottom Right Icon -->
+                <div class="flex justify-end mt-2">
+                  <span class="text-yellow-500 text-lg">👑</span>
+                </div>
               </div>
             </div>
           </div>
@@ -252,47 +253,48 @@
           <!-- Card 2 -->
           <div class="w-1/2 flex-shrink-0 px-3">
             <div
-              class="bg-[#ffffff] border border-yellow-400 rounded-lg transition-all duration-300 ease-in-out hover:bg-[#fffbf5] hover:shadow-xl hover:-translate-y-1">
-              <div class="relative">
+              class="bg-[#f3efe9] border border-yellow-400 rounded-md transition-all duration-300 ease-in-out hover:shadow-lg hover:bg-[#fffbf5] hover:shadow-xl hover:-translate-y-1">
+              <!-- Image Section -->
+              <div class="relative bg-[#f3efe9] p-3">
+                <!-- Featured Badge -->
                 <span
-                  class="absolute top-3 left-3 bg-orange-500 text-white text-xs font-semibold px-3 py-1 rounded">
+                  class="absolute top-0 left-0 bg-orange-500 text-white text-xs font-semibold px-3 py-1">
                   FEATURED
                 </span>
 
-                <div class="grid grid-cols-3 gap-2 p-3">
+                <!-- Images -->
+                <div class="grid grid-cols-3 gap-2 mt-4">
                   <img
                     src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
-                    class="rounded h-24 w-full object-cover" />
+                    class="h-28 w-full object-cover" />
                   <img
                     src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
-                    class="rounded h-24 w-full object-cover" />
+                    class="h-28 w-full object-cover" />
                   <img
                     src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
-                    class="rounded h-24 w-full object-cover" />
+                    class="h-28 w-full object-cover" />
                 </div>
               </div>
 
-              <div class="px-5 pb-5">
-                <h3 class="text-lg font-semibold">
-                  OPPO A3s 6/128 (Brand New)
+              <!-- Content Section -->
+              <div class="px-4 pb-4 pt-2">
+                <h3
+                  class="text-[17px] font-semibold text-gray-800 leading-snug">
+                  HY320 4k Smart Android Projector Original Product
                 </h3>
 
-                <div class="flex gap-2 mt-2">
-                  <span
-                    class="bg-yellow-100 text-yellow-700 text-xs px-2 py-1 rounded-full">
-                    MEMBER
-                  </span>
-                  <span
-                    class="bg-blue-100 text-blue-700 text-xs px-2 py-1 rounded-full">
-                    VERIFIED SELLER
-                  </span>
-                </div>
-
-                <p class="text-gray-500 text-sm mt-2">Dhaka, Mobile Phones</p>
-
-                <p class="text-green-600 font-semibold text-lg mt-2">
-                  Tk 4,790
+                <p class="text-sm text-gray-500 mt-1">
+                  Dhaka, TV & Video Accessories
                 </p>
+
+                <p class="text-green-600 font-semibold mt-2 text-lg">
+                  Tk 5,400
+                </p>
+
+                <!-- Bottom Right Icon -->
+                <div class="flex justify-end mt-2">
+                  <span class="text-yellow-500 text-lg">👑</span>
+                </div>
               </div>
             </div>
           </div>
@@ -307,44 +309,243 @@
     </div>
 
     <!-- Promo -->
-    <div class="bg-white py-10">
-      <div class="max-w-6xl mx-auto px-4 grid md:grid-cols-2 gap-6">
-        <!-- Left -->
-        <div class="flex items-center gap-4 bg-gray-50 p-6 rounded shadow-sm">
-          <div class="text-5xl">💰</div>
+    <div class="bg-[#ffffff] py-16">
+      <div class="max-w-6xl mx-auto px-4">
+        <!-- Grid with Gap -->
+        <div class="grid md:grid-cols-2 gap-4">
+          <!-- Left Card -->
+          <div
+            class="flex items-center gap-6 p-8 bg-white rounded-xl shadow-2xl">
+            <div class="text-6xl">💰</div>
 
-          <div>
-            <h3 class="text-xl font-semibold">Start making money!</h3>
+            <div>
+              <h2 class="text-2xl font-semibold text-gray-800">
+                Start making money!
+              </h2>
 
-            <p class="text-gray-600 text-sm mt-1">
-              Post your first ad and start earning.
-            </p>
+              <p class="text-gray-600 mt-2">
+                Do you have something to sell? Post your first ad and start
+                making money!
+              </p>
 
-            <button class="mt-3 bg-yellow-400 px-5 py-2 rounded font-semibold">
-              Post your ad for free
-            </button>
+              <button
+                class="mt-4 bg-yellow-400 hover:bg-yellow-500 text-gray-900 font-semibold px-6 py-2.5 rounded-full">
+                ➕ Post your ad for free
+              </button>
+            </div>
           </div>
-        </div>
 
-        <!-- Right -->
-        <div class="flex items-center gap-4 bg-gray-50 p-6 rounded shadow-sm">
-          <div class="text-5xl">💼</div>
+          <!-- Right Card -->
+          <div
+            class="flex items-center gap-4 p-4 bg-white rounded-xl shadow-2xl">
+            <div class="text-6xl text-blue-600">💼</div>
 
-          <div>
-            <h3 class="text-xl font-semibold text-blue-600">
-              Marketplace Jobs
-            </h3>
+            <div>
+              <h2 class="text-2xl font-semibold text-blue-700">
+                Bikroy <span class="text-gray-800 font-medium">JOBS</span>
+              </h2>
 
-            <p class="text-gray-600 text-sm mt-1">
-              Find jobs or hire people easily.
-            </p>
+              <p class="text-gray-600 mt-2">
+                Looking to hire or get hired in Bangladesh? Get access to 800k+
+                CVs or browse through 800+ job vacancies!
+              </p>
 
-            <button class="mt-3 bg-blue-600 text-white px-5 py-2 rounded">
-              Explore more
-            </button>
+              <button
+                class="mt-4 bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2.5 rounded-full">
+                Explore more →
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Quick links
+ -->
+    <div class="bg-[#ffffff] py-12">
+      <div class="max-w-6xl mx-auto px-4">
+        <h2 class="text-lg font-semibold text-gray-800 mb-6">Quick links</h2>
+
+        <!-- Cards -->
+        <div class="grid md:grid-cols-4 gap-6">
+          <!-- Card 1 -->
+          <div class="bg-[#e9ecef] p-5 rounded-md">
+            <h3 class="font-semibold text-gray-800 mb-2">
+              47,641 ads in Electronics
+            </h3>
+            <p class="text-sm text-gray-700 leading-6">
+              Desktop Computers | Laptops <br />
+              TVs | Cameras, Camcorders & Accessories <br />
+              Audio & Sound Systems
+            </p>
+          </div>
+
+          <!-- Card 2 -->
+          <div class="bg-[#e9ecef] p-5 rounded-md">
+            <h3 class="font-semibold text-gray-800 mb-2">
+              15,670 ads in Property
+            </h3>
+            <p class="text-sm text-gray-700 leading-6">
+              Apartments For Sale | Land <br />
+              Apartment Rentals <br />
+              Commercial Property Rentals <br />
+              Room Rentals
+            </p>
+          </div>
+
+          <!-- Card 3 -->
+          <div class="bg-[#e9ecef] p-5 rounded-md">
+            <h3 class="font-semibold text-gray-800 mb-2">1,667 ads in Jobs</h3>
+            <p class="text-sm text-gray-700 leading-6">
+              Sales Executive | Marketing Executive <br />
+              Delivery Rider | Customer Service Jobs <br />
+              Supervisor
+            </p>
+          </div>
+
+          <!-- Card 4 -->
+          <div class="bg-[#e9ecef] p-5 rounded-md">
+            <h3 class="font-semibold text-gray-800 mb-2">
+              32,291 ads in Vehicles
+            </h3>
+            <p class="text-sm text-gray-700 leading-6">
+              Cars | Motorbikes | Bicycles <br />
+              Trucks | Auto Parts & Accessories
+            </p>
+          </div>
+        </div>
+
+        <!-- About Section -->
+        <div class="mt-12">
+          <h3 class="text-lg font-semibold text-gray-800 mb-3">
+            About Bikroy, The Largest Marketplace in Bangladesh!
+          </h3>
+
+          <p class="text-gray-600 leading-7 text-sm">
+            Bikroy is a platform on which you can buy and sell almost
+            everything! We help people buy and sell vehicles, find properties,
+            get jobs or recruit employees, buy and sell mobile phones, purchase
+            electronic products, and much more. With more than 50 categories our
+            solutions are built to be safe, smart, and convenient for our
+            customers.
+          </p>
+
+          <button
+            class="mt-4 text-gray-700 font-medium flex items-center gap-1">
+            Show more
+            <span>⌄</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- foter section  -->
+
+    <footer class="bg-[#f2f3f5] pt-14 pb-8">
+      <div class="max-w-6xl mx-auto px-4">
+        <!-- Top Footer Grid -->
+        <div class="grid md:grid-cols-5 gap-10 text-sm text-gray-700">
+          <!-- Column 1 -->
+          <div>
+            <h3 class="font-semibold text-gray-800 mb-4">More from Bikroy</h3>
+            <ul class="space-y-3">
+              <li><a href="">Sell Fast</a></li>
+              <li><a href="">Membership</a></li>
+              <li><a href="">Banner Ads</a></li>
+              <li><a href="">Boost Ad</a></li>
+            </ul>
+          </div>
+
+          <!-- Column 2 -->
+          <div>
+            <h3 class="font-semibold text-gray-800 mb-4">Help & Support</h3>
+            <ul class="space-y-3">
+              <li><a href="">FAQ</a></li>
+              <li><a href="">Stay safe</a></li>
+              <li><a href="">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <!-- Column 3 -->
+          <div>
+            <h3 class="font-semibold text-gray-800 mb-4">About Bikroy</h3>
+            <ul class="space-y-3">
+              <li><a href="">About Us</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Terms and Conditions</a></li>
+              <li><a href="">Privacy policy</a></li>
+              <li><a href="">Sitemap</a></li>
+            </ul>
+          </div>
+
+          <!-- Column 4 -->
+          <div>
+            <h3 class="font-semibold text-gray-800 mb-4">Blog & Guides</h3>
+            <ul class="space-y-3">
+              <li><a href="">MotorGuide BD</a></li>
+              <li><a href="">PropertyGuide BD</a></li>
+              <li><a href="">Official Blog</a></li>
+            </ul>
+
+            <!-- Social Icons -->
+            <div class="flex gap-4 mt-4 text-lg">
+              <span><a href=""><i class="fa-brands fa-facebook"></i></a></span>
+              <span><a href=""><i class="fa-brands fa-x-twitter"></i></a></span>
+              <span><a href=""><i class="fa-brands fa-tiktok"></i></a></span>
+              <span><a href=""><i class="fa-brands fa-youtube"></i></a></span>
+            </div>
+          </div>
+
+          <!-- Column 5 -->
+          <div>
+            <h3 class="font-semibold text-gray-800 mb-4">Download our app</h3>
+
+            <div class="space-y-3">
+              <a href="">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
+                  class="h-10"
+                  alt="Google Play"
+              /></a>
+              <a href=""
+                ><img
+                  src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+                  class="h-11"
+                  alt="App Store"
+              /></a>
+            </div>
+
+            <h3 class="font-semibold text-2xl text-gray-800 mt-6 mb-2">
+              Other countries
+            </h3>
+
+            <div class="flex items-center gap-2">
+              <img
+                src="https://flagcdn.com/w40/lk.png"
+                class="h-5 w-5 rounded-full"
+                alt="Sri Lanka" />
+              <a href=""><span>Sri Lanka</span></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Divider -->
+        <div
+          class="border-t border-gray-300 mt-10 pt-6 flex flex-col md:flex-row justify-between items-center text-sm text-gray-600">
+          <p>© 2026. All rights reserved. Saltside Technologies</p>
+
+          <div class="mt-4 md:mt-0">
+  <div class="flex items-center gap-2">
+    <img
+      src="./img/images.png"
+      alt="Bikroy Logo"
+      class="h-10 w-auto brightness-1 opacity-70"
+    />
+  </div>
+</div>
+
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
