--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet" />
+
   </head>
 
   <body class="bg-[#ffffff]">
@@ -35,7 +36,7 @@
             </div>
             <button>
               <span class="text-sm"
-                ><a href="#" class="font-medium">All ads</a></span
+                ><a href="./allads.html" class="font-medium">All ads</a></span
               >
               <span
                 class="text-sm px-2 py-2 items-center rounded border border-[#007168] text-white"
@@ -489,10 +490,18 @@
 
             <!-- Social Icons -->
             <div class="flex gap-4 mt-4 text-lg">
-              <span><a href=""><i class="fa-brands fa-facebook"></i></a></span>
-              <span><a href=""><i class="fa-brands fa-x-twitter"></i></a></span>
-              <span><a href=""><i class="fa-brands fa-tiktok"></i></a></span>
-              <span><a href=""><i class="fa-brands fa-youtube"></i></a></span>
+              <span
+                ><a href=""><i class="fa-brands fa-facebook"></i></a
+              ></span>
+              <span
+                ><a href=""><i class="fa-brands fa-x-twitter"></i></a
+              ></span>
+              <span
+                ><a href=""><i class="fa-brands fa-tiktok"></i></a
+              ></span>
+              <span
+                ><a href=""><i class="fa-brands fa-youtube"></i></a
+              ></span>
             </div>
           </div>
 
@@ -535,15 +544,13 @@
           <p>© 2026. All rights reserved. Saltside Technologies</p>
 
           <div class="mt-4 md:mt-0">
-  <div class="flex items-center gap-2">
-    <img
-      src="./img/images.png"
-      alt="Bikroy Logo"
-      class="h-10 w-auto brightness-1 opacity-70"
-    />
-  </div>
-</div>
-
+            <div class="flex items-center gap-2">
+              <img
+                src="./img/images.png"
+                alt="Bikroy Logo"
+                class="h-10 w-auto brightness-1 opacity-70" />
+            </div>
+          </div>
         </div>
       </div>
     </footer>
