--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Menu -->
         <div class="flex items-center gap-6">
           <a href="#"><i class="fa-regular fa-comments"></i> Chat</a>
-          <a href="#"><i class="fa-regular fa-user"></i> Account</a>
+          <a href="/acount.html"><i class="fa-regular fa-user"></i> Account</a>
 
           <button
             class="bg-[#ffc800] text-black font-semibold px-3 py-3 rounded">
