all delats update

--- a/Mymembership.html
+++ b/Mymembership.html
@@ -66,7 +66,6 @@
       </div>
     </div>
 
-
     <!-- acount section -->
     <div class="bg-[#eef2f3] min-h-screen py-10">
       <div class="max-w-6xl mx-auto bg-white rounded-lg p-6">
@@ -77,16 +76,22 @@
 
             <div class="space-y-4 text-[15px]">
               <a
-                href="/acount.html"
+                href="#"
                 class="flex justify-between items-center pb-3 border-b text-gray-700 font-semibold">
                 My ads
                 <span class="text-gray-400">›</span>
               </a>
 
               <a
-                href="/Mymembership.html"
+                href="/acount.html"
                 class="flex justify-between items-center pb-3 border-b text-blue-600">
                 My membership
+                <span class="text-gray-400">›</span>
+              </a>
+              <a
+                href="#"
+                class="flex justify-between items-center pb-3 border-b text-blue-600">
+                Saved searches
                 <span class="text-gray-400">›</span>
               </a>
               <a
@@ -131,32 +136,38 @@
             </div>
           </div>
 
+          
           <!-- Main Content -->
           <div class="flex-1">
-            <!-- Name -->
-            <h2 class="text-lg font-semibold text-gray-700 border-b pb-4">
-              Jackson Chakma
+            <!-- Page Title -->
+            <h2 class="text-xl font-semibold text-gray-800 border-b pb-4">
+              My Membership
             </h2>
 
-            <!-- Empty State -->
-            <div
-              class="flex flex-col items-center justify-center text-center py-20">
-              <!-- Box Icon -->
-              <div class="text-6xl mb-6">📦</div>
+            <!-- Membership Section -->
+            <div class="flex flex-col md:flex-row gap-6 mt-8 items-start">
+              <!-- Icon -->
+              <div class="text-6xl">🏪</div>
 
-              <h3 class="text-lg font-semibold text-gray-800">
-                You don't have any ads yet.
-              </h3>
+              <!-- Text Content -->
+              <div class="max-w-xl">
+                <h3 class="text-lg font-semibold text-gray-800 mb-3">
+                  Become a bikroy member
+                </h3>
 
-              <p class="text-gray-500 mt-2 text-sm">
-                Click the Post an ad now! button to post your ad.
-              </p>
+                <p class="text-gray-600 text-sm leading-relaxed">
+                  Memberships give your business a voice and presence on bikroy,
+                  to reach more customers, increase your sales and expand your
+                  business! Memberships unlock powerful tools like sales
+                  analytics, a dedicated business page and discounted ad
+                  promotions.
+                </p>
 
-              <!-- Button -->
-              <button
-                class="mt-8 bg-[#ffc800] hover:bg-yellow-400 text-black font-semibold px-6 py-3 rounded-md shadow">
-                Post your ad now!
-              </button>
+                <button
+                  class="mt-6 bg-[#1f8f6f] hover:bg-[#167a5f] text-white font-semibold px-6 py-3 rounded-md transition">
+                  Contact us
+                </button>
+              </div>
             </div>
           </div>
         </div>
