--- a/allads.html
+++ b/allads.html
@@ -59,7 +59,7 @@
           <i class="fa-regular fa-comments"></i> Chat
         </a>
 
-        <a href="#" class="flex items-center gap-1 hover:opacity-80">
+        <a href="/acount.html" class="flex items-center gap-1 hover:opacity-80">
           <i class="fa-regular fa-user"></i> Account
         </a>
 
@@ -845,7 +845,7 @@
 
 </div>
 
-
+<!--footer section  -->
     <footer class="bg-[#f2f3f5] mt-6 pt-14 pb-8">
       <div class="max-w-6xl mx-auto px-4">
         <!-- Top Footer Grid -->
