--- a/Saved-searches.html
+++ b/Saved-searches.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -66,7 +66,6 @@
       </div>
     </div>
 
-
     <!-- acount section -->
     <div class="bg-[#eef2f3] min-h-screen py-10">
       <div class="max-w-6xl mx-auto bg-white rounded-lg p-6">
@@ -77,16 +76,22 @@
 
             <div class="space-y-4 text-[15px]">
               <a
-                href="/acount.html"
+                href="#"
                 class="flex justify-between items-center pb-3 border-b text-gray-700 font-semibold">
                 My ads
                 <span class="text-gray-400">›</span>
               </a>
 
               <a
-                href="/Mymembership.html"
+                href="/acount.html"
                 class="flex justify-between items-center pb-3 border-b text-blue-600">
                 My membership
+                <span class="text-gray-400">›</span>
+              </a>
+              <a
+                href="#"
+                class="flex justify-between items-center pb-3 border-b text-blue-600">
+                Saved searches
                 <span class="text-gray-400">›</span>
               </a>
               <a
@@ -131,34 +136,55 @@
             </div>
           </div>
 
+          
           <!-- Main Content -->
-          <div class="flex-1">
-            <!-- Name -->
-            <h2 class="text-lg font-semibold text-gray-700 border-b pb-4">
-              Jackson Chakma
-            </h2>
+        <!-- Main Content -->
+<div class="flex-1">
 
-            <!-- Empty State -->
-            <div
-              class="flex flex-col items-center justify-center text-center py-20">
-              <!-- Box Icon -->
-              <div class="text-6xl mb-6">📦</div>
+  <!-- Page Title -->
+  <h2 class="text-xl font-semibold text-gray-800 border-b pb-4">
+    Saved searches
+  </h2>
 
-              <h3 class="text-lg font-semibold text-gray-800">
-                You don't have any ads yet.
-              </h3>
+  <!-- Empty State -->
+  <div class="flex flex-col items-center text-center py-20">
 
-              <p class="text-gray-500 mt-2 text-sm">
-                Click the Post an ad now! button to post your ad.
-              </p>
+    <h3 class="text-lg font-semibold text-gray-800">
+      You have no saved searches.
+    </h3>
 
-              <!-- Button -->
-              <button
-                class="mt-8 bg-[#ffc800] hover:bg-yellow-400 text-black font-semibold px-6 py-3 rounded-md shadow">
-                Post your ad now!
-              </button>
-            </div>
-          </div>
+    <p class="text-gray-500 text-sm mt-4 max-w-md leading-relaxed">
+      To save a search, click on “Saved search” in your list of search
+      results and we will update you when there is a new item added.
+    </p>
+
+    <!-- Button + Arrows -->
+    <div class="relative mt-10">
+
+      <!-- Left Arrow -->
+      <div class="absolute -left-16 -top-6 text-blue-300 text-4xl rotate-[-30deg]">
+        ↷
+      </div>
+
+      <!-- Right Arrow -->
+      <div class="absolute -right-16 -top-6 text-blue-300 text-4xl rotate-[30deg]">
+        ↶
+      </div>
+
+      <!-- Button -->
+      <button
+        class="bg-blue-100 hover:bg-blue-200
+               text-blue-600 font-medium
+               px-6 py-3 rounded-md
+               transition flex items-center gap-2">
+        🔖 Save search
+      </button>
+
+    </div>
+
+  </div>
+</div>
+
         </div>
       </div>
     </div>
