--- a/Settings.html
+++ b/Settings.html
@@ -245,9 +245,7 @@
 
         </div>
       </div>
-    </div>
-
-    <!-- footer section -->
+       <!-- footer section -->
     <footer class="bg-[#f2f3f5] pt-14 pb-8">
       <div class="max-w-6xl mx-auto px-4">
         <!-- Top Footer Grid -->
@@ -359,6 +357,10 @@
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+
+>
   </body>
 </html>
+   
+    </footer
