--- a/Saved-searches.html
+++ b/Saved-searches.html
@@ -1,4 +1,4 @@
- <!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -136,171 +136,162 @@
             </div>
           </div>
 
-          
           <!-- Main Content -->
-        <!-- Main Content -->
-<div class="flex-1">
+          <!-- Main Content -->
+          <div class="flex-1">
+            <!-- Page Title -->
+            <h2 class="text-xl font-semibold text-gray-800 border-b pb-4">
+              Saved searches
+            </h2>
 
-  <!-- Page Title -->
-  <h2 class="text-xl font-semibold text-gray-800 border-b pb-4">
-    Saved searches
-  </h2>
+            <!-- Empty State -->
+            <div class="flex flex-col items-center text-center py-20">
+              <h3 class="text-lg font-semibold text-gray-800">
+                You have no saved searches.
+              </h3>
 
-  <!-- Empty State -->
-  <div class="flex flex-col items-center text-center py-20">
+              <p class="text-gray-500 text-sm mt-4 max-w-md leading-relaxed">
+                To save a search, click on “Saved search” in your list of search
+                results and we will update you when there is a new item added.
+              </p>
 
-    <h3 class="text-lg font-semibold text-gray-800">
-      You have no saved searches.
-    </h3>
+              <!-- Button + Arrows -->
+              <div class="relative mt-10">
+                <!-- Left Arrow -->
+                <div
+                  class="absolute -left-16 -top-6 text-blue-300 text-4xl rotate-[-30deg]">
+                  ↷
+                </div>
 
-    <p class="text-gray-500 text-sm mt-4 max-w-md leading-relaxed">
-      To save a search, click on “Saved search” in your list of search
-      results and we will update you when there is a new item added.
-    </p>
+                <!-- Right Arrow -->
+                <div
+                  class="absolute -right-16 -top-6 text-blue-300 text-4xl rotate-[30deg]">
+                  ↶
+                </div>
 
-    <!-- Button + Arrows -->
-    <div class="relative mt-10">
-
-      <!-- Left Arrow -->
-      <div class="absolute -left-16 -top-6 text-blue-300 text-4xl rotate-[-30deg]">
-        ↷
-      </div>
-
-      <!-- Right Arrow -->
-      <div class="absolute -right-16 -top-6 text-blue-300 text-4xl rotate-[30deg]">
-        ↶
-      </div>
-
-      <!-- Button -->
-      <button
-        class="bg-blue-100 hover:bg-blue-200
-               text-blue-600 font-medium
-               px-6 py-3 rounded-md
-               transition flex items-center gap-2">
-        🔖 Save search
-      </button>
-
-    </div>
-
-  </div>
-</div>
-
-        </div>
-      </div>
-    </div>
-
-    <!-- footer section -->
-    <footer class="bg-[#f2f3f5] pt-14 pb-8">
-      <div class="max-w-6xl mx-auto px-4">
-        <!-- Top Footer Grid -->
-        <div class="grid md:grid-cols-5 gap-10 text-sm text-gray-700">
-          <!-- Column 1 -->
-          <div>
-            <h3 class="font-semibold text-gray-800 mb-4">More from Bikroy</h3>
-            <ul class="space-y-3">
-              <li><a href="">Sell Fast</a></li>
-              <li><a href="">Membership</a></li>
-              <li><a href="">Banner Ads</a></li>
-              <li><a href="">Boost Ad</a></li>
-            </ul>
-          </div>
-
-          <!-- Column 2 -->
-          <div>
-            <h3 class="font-semibold text-gray-800 mb-4">Help & Support</h3>
-            <ul class="space-y-3">
-              <li><a href="">FAQ</a></li>
-              <li><a href="">Stay safe</a></li>
-              <li><a href="">Contact Us</a></li>
-            </ul>
-          </div>
-
-          <!-- Column 3 -->
-          <div>
-            <h3 class="font-semibold text-gray-800 mb-4">About Bikroy</h3>
-            <ul class="space-y-3">
-              <li><a href="">About Us</a></li>
-              <li><a href="">Careers</a></li>
-              <li><a href="">Terms and Conditions</a></li>
-              <li><a href="">Privacy policy</a></li>
-              <li><a href="">Sitemap</a></li>
-            </ul>
-          </div>
-
-          <!-- Column 4 -->
-          <div>
-            <h3 class="font-semibold text-gray-800 mb-4">Blog & Guides</h3>
-            <ul class="space-y-3">
-              <li><a href="">MotorGuide BD</a></li>
-              <li><a href="">PropertyGuide BD</a></li>
-              <li><a href="">Official Blog</a></li>
-            </ul>
-
-            <!-- Social Icons -->
-            <div class="flex gap-4 mt-4 text-lg">
-              <span
-                ><a href=""><i class="fa-brands fa-facebook"></i></a
-              ></span>
-              <span
-                ><a href=""><i class="fa-brands fa-x-twitter"></i></a
-              ></span>
-              <span
-                ><a href=""><i class="fa-brands fa-tiktok"></i></a
-              ></span>
-              <span
-                ><a href=""><i class="fa-brands fa-youtube"></i></a
-              ></span>
+                <!-- Button -->
+                <button
+                  class="bg-blue-100 hover:bg-blue-200 text-blue-600 font-medium px-6 py-3 rounded-md transition flex items-center gap-2">
+                  🔖 Save search
+                </button>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- footer section -->
+      <footer class="bg-[#f2f3f5] pt-14 pb-8">
+        <div class="max-w-6xl mx-auto px-4">
+          <!-- Top Footer Grid -->
+          <div class="grid md:grid-cols-5 gap-10 text-sm text-gray-700">
+            <!-- Column 1 -->
+            <div>
+              <h3 class="font-semibold text-gray-800 mb-4">More from Bikroy</h3>
+              <ul class="space-y-3">
+                <li><a href="">Sell Fast</a></li>
+                <li><a href="">Membership</a></li>
+                <li><a href="">Banner Ads</a></li>
+                <li><a href="">Boost Ad</a></li>
+              </ul>
+            </div>
 
-          <!-- Column 5 -->
-          <div>
-            <h3 class="font-semibold text-gray-800 mb-4">Download our app</h3>
+            <!-- Column 2 -->
+            <div>
+              <h3 class="font-semibold text-gray-800 mb-4">Help & Support</h3>
+              <ul class="space-y-3">
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Stay safe</a></li>
+                <li><a href="">Contact Us</a></li>
+              </ul>
+            </div>
 
-            <div class="space-y-3">
-              <a href="">
+            <!-- Column 3 -->
+            <div>
+              <h3 class="font-semibold text-gray-800 mb-4">About Bikroy</h3>
+              <ul class="space-y-3">
+                <li><a href="">About Us</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Terms and Conditions</a></li>
+                <li><a href="">Privacy policy</a></li>
+                <li><a href="">Sitemap</a></li>
+              </ul>
+            </div>
+
+            <!-- Column 4 -->
+            <div>
+              <h3 class="font-semibold text-gray-800 mb-4">Blog & Guides</h3>
+              <ul class="space-y-3">
+                <li><a href="">MotorGuide BD</a></li>
+                <li><a href="">PropertyGuide BD</a></li>
+                <li><a href="">Official Blog</a></li>
+              </ul>
+
+              <!-- Social Icons -->
+              <div class="flex gap-4 mt-4 text-lg">
+                <span
+                  ><a href=""><i class="fa-brands fa-facebook"></i></a
+                ></span>
+                <span
+                  ><a href=""><i class="fa-brands fa-x-twitter"></i></a
+                ></span>
+                <span
+                  ><a href=""><i class="fa-brands fa-tiktok"></i></a
+                ></span>
+                <span
+                  ><a href=""><i class="fa-brands fa-youtube"></i></a
+                ></span>
+              </div>
+            </div>
+
+            <!-- Column 5 -->
+            <div>
+              <h3 class="font-semibold text-gray-800 mb-4">Download our app</h3>
+
+              <div class="space-y-3">
+                <a href="">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
+                    class="h-10"
+                    alt="Google Play"
+                /></a>
+                <a href=""
+                  ><img
+                    src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+                    class="h-11"
+                    alt="App Store"
+                /></a>
+              </div>
+
+              <h3 class="font-semibold text-2xl text-gray-800 mt-6 mb-2">
+                Other countries
+              </h3>
+
+              <div class="flex items-center gap-2">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
-                  class="h-10"
-                  alt="Google Play"
-              /></a>
-              <a href=""
-                ><img
-                  src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
-                  class="h-11"
-                  alt="App Store"
-              /></a>
+                  src="https://flagcdn.com/w40/lk.png"
+                  class="h-5 w-5 rounded-full"
+                  alt="Sri Lanka" />
+                <a href=""><span>Sri Lanka</span></a>
+              </div>
             </div>
+          </div>
 
-            <h3 class="font-semibold text-2xl text-gray-800 mt-6 mb-2">
-              Other countries
-            </h3>
+          <!-- Divider -->
+          <div
+            class="border-t border-gray-300 mt-10 pt-6 flex flex-col md:flex-row justify-between items-center text-sm text-gray-600">
+            <p>© 2026. All rights reserved. Saltside Technologies</p>
 
-            <div class="flex items-center gap-2">
-              <img
-                src="https://flagcdn.com/w40/lk.png"
-                class="h-5 w-5 rounded-full"
-                alt="Sri Lanka" />
-              <a href=""><span>Sri Lanka</span></a>
+            <div class="mt-4 md:mt-0">
+              <div class="flex items-center gap-2">
+                <img
+                  src="./img/images.png"
+                  alt="Bikroy Logo"
+                  class="h-10 w-auto brightness-1 opacity-70" />
+              </div>
             </div>
           </div>
         </div>
-
-        <!-- Divider -->
-        <div
-          class="border-t border-gray-300 mt-10 pt-6 flex flex-col md:flex-row justify-between items-center text-sm text-gray-600">
-          <p>© 2026. All rights reserved. Saltside Technologies</p>
-
-          <div class="mt-4 md:mt-0">
-            <div class="flex items-center gap-2">
-              <img
-                src="./img/images.png"
-                alt="Bikroy Logo"
-                class="h-10 w-auto brightness-1 opacity-70" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
