--- a/profile-database.html
+++ b/profile-database.html
@@ -237,12 +237,9 @@
     </div>
 
   </div>
-</div>
+     <!-- footer section -->
 
-
-    <!-- footer section -->
-<!-- FOOTER -->
-<footer class="bg-[#f2f2f2] border-t border-t-4 border-blue-700
+<footer class="bg-[#f2f2f2] border-t mt-8 border-t-4 border-blue-700
 ">
 
   <div class="max-w-6xl mx-auto px-6 py-12">
@@ -340,5 +337,9 @@
 
 </footer>
 
+</div>
+
+
+ 
   </body>
 </html>
