--- a/Contact-us.html
+++ b/Contact-us.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -68,104 +68,78 @@
 
     <!-- acount section -->
     <div class="bg-[#eef2f3] min-h-screen py-10">
-      <div class="max-w-6xl mx-auto bg-white rounded-lg p-6">
-        <div class="flex flex-col lg:flex-row gap-8">
-          <!-- Sidebar -->
-          <div class="w-full lg:w-1/4">
-            <h2 class="text-lg font-semibold text-gray-700 mb-6">Account</h2>
 
-            <div class="space-y-4 text-[15px]">
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-gray-700 font-semibold">
-                My ads
-                <span class="text-gray-400">›</span>
-              </a>
+    <div class="bg-gray-100 min-h-screen py-12 px-4">
+  <div class="max-w-5xl mx-auto bg-white rounded shadow p-8 md:p-12 text-center">
 
-              <a
-                href="/acount.html"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                My membership
-                <span class="text-gray-400">›</span>
-              </a>
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Saved searches
-                <span class="text-gray-400">›</span>
-              </a>
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Favorites
-                <span class="text-gray-400">›</span>
-              </a>
+    <!-- Top Image -->
+    <div class="flex justify-center mb-8">
+      <img src="https://cdni.iconscout.com/illustration/premium/thumb/contact-us-3482999-2912010.png"
+           alt="contact illustration"
+           class="w-72 md:w-96">
+    </div>
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Settings
-                <span class="text-gray-400">›</span>
-              </a>
+    <!-- Title -->
+    <h2 class="text-2xl md:text-3xl font-semibold mb-3">Contact us</h2>
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Phone Numbers
-                <span class="text-gray-400">›</span>
-              </a>
+    <p class="text-gray-600 max-w-2xl mx-auto text-sm md:text-base">
+      Check out our 
+      <a href="#" class="text-blue-600 hover:underline">FAQs</a> 
+      and 
+      <a href="#" class="text-blue-600 hover:underline">Stay Safe</a> 
+      sections to see if your question has already been answered.
+      <br class="hidden md:block">
+      If not, please get in touch with us and we will get back to you as soon as possible.
+    </p>
 
-              <div
-                class="pt-6 text-gray-600 font-semibold flex items-center gap-2">
-                💼 Jobs
-              </div>
+    <!-- Divider -->
+    <div class="my-10 border-t"></div>
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600 mt-3">
-                My Profile
-                <span class="text-gray-400">›</span>
-              </a>
+    <!-- Sub Title -->
+    <h3 class="text-lg md:text-xl font-semibold mb-2">
+      You can also call or email us
+    </h3>
+    <p class="text-gray-500 mb-10 text-sm">
+      Every day from 10:00 AM to 8:00 PM
+    </p>
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Profile Database
-                <span class="text-gray-400">›</span>
-              </a>
-            </div>
-          </div>
+    <!-- Contact Info -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
 
-          <!-- Main Content -->
-          <div class="flex-1">
-            <!-- Page Title -->
-            <h2 class="text-xl font-semibold text-gray-800 border-b pb-4">
-              Phone Numbers
-            </h2>
-
-            <!-- Empty State -->
-            <div
-              class="flex flex-col md:flex-row items-center md:items-start gap-8 py-16">
-              <!-- Phone Icon -->
-              <div class="text-7xl text-gray-400">📵</div>
-
-              <!-- Text Content -->
-              <div class="max-w-xl text-center md:text-left">
-                <h3 class="text-base font-semibold text-gray-800">
-                  There are currently no phone numbers associated with your
-                  account.
-                </h3>
-
-                <p class="text-gray-600 text-sm mt-4 leading-relaxed">
-                  Phone numbers are unique to your account and will be collected
-                  while you are posting ads or ordering products on bikroy.
-                </p>
-              </div>
-            </div>
-          </div>
+      <!-- Call -->
+      <div>
+        <div class="text-green-600 text-3xl mb-2">
+          <i class="fa-solid fa-phone"></i>
         </div>
+        <p class="font-medium">Call us</p>
+        <p class="text-blue-600 mt-2">09609 555444</p>
       </div>
-      <!-- footer section -->
+
+      <!-- Address -->
+      <div>
+        <div class="text-green-600 text-3xl mb-2">
+          <i class="fa-solid fa-location-dot"></i>
+        </div>
+        <p class="font-medium">Address</p>
+        <p class="text-gray-700 mt-2 text-sm">
+          Floor-12, MS Center, Plot 8, Bir Uttam AK<br>
+          Khandakar Road, Mohakhali C/A, Dhaka-1212
+        </p>
+      </div>
+
+      <!-- Email -->
+      <div>
+        <div class="text-green-600 text-3xl mb-2">
+          <i class="fa-solid fa-envelope"></i>
+        </div>
+        <p class="font-medium">Email us</p>
+        <p class="text-blue-600 mt-2">support@bikroy.com</p>
+      </div>
+
+    </div>
+
+  </div>
+   <!-- footer section -->
       <footer class="bg-[#f2f3f5] pt-14 pb-8">
         <div class="max-w-6xl mx-auto px-4">
           <!-- Top Footer Grid -->
@@ -278,6 +252,9 @@
           </div>
         </div>
       </footer>
+</div>
+
+     
     </div>
   </body>
 </html>
